--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href='css/font-awesome.min.css'>
         <link rel="stylesheet" href="css/animate.css">
-        <!-- <link rel="stylesheet" href="css/media.css">-->
+        <link rel="stylesheet" href="css/media.css">
     </head>
     <body>
         <div class='header'></div>
@@ -71,7 +71,7 @@
                 </div>
             </div>
         
-            <div class='info info_big'>
+            <div class='info info_big about'>
                 <p class='info_h'>Обо мне</p>
                 <p class='info_text'>Люблю пить кофе, писать код для интересных задач, общаться с позитивными людьми и делать что-то хорошее для мира.</p>
             </div>
