--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>GusevMS</title>
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href='css/font-awesome.min.css'>
@@ -25,7 +26,7 @@
             </div>
             
             <div class='all_here animated fadeIn'>
-            <div class='info'>
+            <div class='info spacehere'>
                 <div class='info_part'>
                     <p class='info_h'>Навыки</p>
                     <ul class='info_text'>
