--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="css/media.css">
     </head>
     <body>
-        <div class='header'></div>
+        <div class='header'>
             <div class='my_photo'>
                 <img src='img/myphoto2.jpg' id='my_photo'>
             </div>
@@ -25,6 +25,7 @@
                 <p class='my_profession'>я занимаюсь веб-разработкой</p>
             </div>
             
+        </div>
             <div class='all_here animated fadeIn'>
             <div class='info spacehere'>
                 <div class='info_part'>
