--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </div>
         
             <div class='download'>
-                <a href='rezume.docx' download="rezume.docx" class='resume animated'>Скачать резюме <span class="fa fa-paperclip" aria-hidden="true"></span></a>
+                <a href='Gusev_Maxim_resume.rtf' download="Gusev_Maxim_resume.rtf" class='resume'>Скачать резюме <span class="fa fa-paperclip" aria-hidden="true"></span></a>
             </div>
             
             <div class='hi_part animated fadeIn' id='hi_part'>
