add preview image

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:title" content="GusevMS">
+        <meta property="og:site_name" content="GusevMS">
+        <meta property="og:description" content="Резюме frontend-разработчика Гусев М.С.">
+        <meta property="og:image" content="img/preview.jpg">
         <title>GusevMS</title>
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href='css/font-awesome.min.css'>
