--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta property="og:title" content="GusevMS">
         <meta property="og:site_name" content="GusevMS">
         <meta property="og:description" content="Резюме frontend-разработчика Гусев М.С.">
-        <meta property="og:image" content="https://maxorik.github.io/rezume/img/preview.jpg">
+        <meta property="og:image" content="https://maxorik.github.io/rezume/img/preview2.jpg">
         <title>GusevMS</title>
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href='css/font-awesome.min.css'>
