--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <p class='info_h'>Навыки</p>
                     <ul class='info_text'>
                         <i class="fa fa-check-circle" aria-hidden="true"></i><li>HTML (также Pug)</li>
-                        <i class="fa fa-check-circle" aria-hidden="true"></i><li>CSS (также Scss)</li>
+                        <i class="fa fa-check-circle" aria-hidden="true"></i><li>CSS (также Less)</li>
                         <i class="fa fa-check-circle" aria-hidden="true"></i><li>JavaScript (и немного Jquery)</li>
                         <i class="fa fa-check-circle" aria-hidden="true"></i><li>Система контроля версий (Git)</li>
                         <i class="fa fa-check-circle" aria-hidden="true"></i><li>Сборщики (webpack)</li>
