--- a/index.html
+++ b/index.html
@@ -71,9 +71,10 @@
                 <p class='info_h'>Свяжитесь со мной</p>
                 <div class='info_text'>
                     <span class='my_name'>Почта </span> gms441@mail.ru<br />
+                    <span class='my_name'>Телефон </span> +7-923-247-9391<br />
                     <span class='my_name'>Telegram </span><a href='https://tlgg.ru/Maxorik' target="_blank" title='Перейти в Телеграм'
 > перейти в чат</a><br />
-                    <span class='my_name'>Телефон </span> +7-923-247-9391<br />
+                    <span class='my_name'>Skype </span><a href="skype:live:.cid.ab8b5f2776bf2588?chat"> перейти в чат</a><br />
                 </div>
             </section>
         
