--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta property="og:title" content="GusevMS">
-        <meta property="og:site_name" content="GusevMS">
+        <meta property="og:title" content="GusevMS resume">
+        <meta property="og:site_name" content="GusevMS resume">
         <meta property="og:description" content="Резюме frontend-разработчика Гусев М.С.">
         <meta property="og:image" content="https://maxorik.github.io/rezume/img/preview2.jpg">
         <title>GusevMS</title>
