--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <p class='info_h'>Свяжитесь со мной</p>
                 <div class='info_text'>
                     <span class='my_name'>Почта </span> gms441@mail.ru<br />
-                    <span class='my_name'>Телефон </span> +7-923-247-9391<br />
+                    <span class='my_name'>Телефон </span> +7-983-340-1245<br />
                     <span class='my_name'>Telegram </span><a href='https://tlgg.ru/Maxorik' target="_blank" title='Перейти в Телеграм'
 > перейти в чат</a><br />
                     <span class='my_name'>Skype </span><a href="skype:live:.cid.ab8b5f2776bf2588?chat"> перейти в чат</a><br />
@@ -81,6 +81,30 @@
             <section class='info info_big about'>
                 <p class='info_h'>Обо мне</p>
                 <p class='info_text'>Люблю пить кофе, писать код для интересных задач, общаться с позитивными людьми и делать что-то хорошее для мира.</p>
+            </section>
+                
+            <section class='info info_big last_works'>
+                <p class='info_h'>Примеры работ</p>
+                <div class='work_example'>
+                    <div class='preview_work'>
+                        <a href='https://maxorik.github.io/test_landing/' target="_blank">
+                            <img class='img_work' src='img/2--landing.jpg'>
+                        </a>
+                        <p>landing page</p>
+                    </div>
+                    <div class='preview_work'>
+                        <a href='https://maxorik.github.io/todo/' target="_blank">
+                            <img class='img_work' src='img/3--todo.jpg'>
+                        </a>
+                        <p>blocknote</p>
+                    </div>
+                    <div class='preview_work'>
+                        <a href='https://maxorik.github.io/hotel/page3.html' target="_blank">
+                            <img class='img_work' src='img/1--hotel.jpg'>
+                        </a>
+                        <p>hotel site (not adaptive)</p>
+                    </div>
+                </div>
             </section>
             </main>
     
