add vue information and example

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
                     <ul class='info_text'>
                         <i class="fa fa-check-circle" aria-hidden="true"></i><li>HTML (также Pug)</li>
                         <i class="fa fa-check-circle" aria-hidden="true"></i><li>CSS (также Less)</li>
-                        <i class="fa fa-check-circle" aria-hidden="true"></i><li>JavaScript (и немного Jquery)</li>
+                        <i class="fa fa-check-circle" aria-hidden="true"></i><li>JavaScript</li>
+                        <i class="fa fa-check-circle" aria-hidden="true"></i><li>Vue.js</li>
                         <i class="fa fa-check-circle" aria-hidden="true"></i><li>Система контроля версий (Git)</li>
                         <i class="fa fa-check-circle" aria-hidden="true"></i><li>Сборщики (webpack)</li>
                         <i class="fa fa-check-circle" aria-hidden="true"></i><li>CMS (wordpress)</li>
@@ -87,6 +88,12 @@
                 <p class='info_h'>Примеры работ</p>
                 <div class='work_example'>
                     <div class='preview_work'>
+                        <a href='https://maxorik.github.io/bakery/' target="_blank">
+                            <img class='img_work' src='img/1--bakery.jpg'>
+                        </a>
+                        <p>SPA on Vue</p>
+                    </div>
+                    <div class='preview_work'>
                         <a href='https://maxorik.github.io/test_landing/' target="_blank">
                             <img class='img_work' src='img/2--landing.jpg'>
                         </a>
@@ -97,12 +104,6 @@
                             <img class='img_work' src='img/3--todo.jpg'>
                         </a>
                         <p>blocknote</p>
-                    </div>
-                    <div class='preview_work'>
-                        <a href='https://maxorik.github.io/hotel/page3.html' target="_blank">
-                            <img class='img_work' src='img/1--hotel.jpg'>
-                        </a>
-                        <p>hotel site (not adaptive)</p>
                     </div>
                 </div>
             </section>
