--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <div class='work_example'>
                     <div class='preview_work'>
                         <a href='https://maxorik.github.io/bakery/' target="_blank">
-                            <img class='img_work' src='img/1--bakery.jpeg'>
+                            <img class='img_work' src='img/1--bakery.JPG'>
                         </a>
                         <p>SPA on Vue</p>
                     </div>
