--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <ul class='info_text'>
                         <i class="fa fa-check-circle" aria-hidden="true"></i><li>HTML (также Pug)</li>
                         <i class="fa fa-check-circle" aria-hidden="true"></i><li>CSS (также Less)</li>
-                        <i class="fa fa-check-circle" aria-hidden="true"></i><li>JavaScript</li>
+                        <i class="fa fa-check-circle" aria-hidden="true"></i><li>JavaScript и Jquery</li>
                         <i class="fa fa-check-circle" aria-hidden="true"></i><li>Vue.js</li>
                         <i class="fa fa-check-circle" aria-hidden="true"></i><li>Система контроля версий (Git)</li>
                         <i class="fa fa-check-circle" aria-hidden="true"></i><li>Сборщики (webpack)</li>
@@ -94,10 +94,10 @@
                         <p>SPA on Vue</p>
                     </div>
                     <div class='preview_work'>
-                        <a href='https://maxorik.github.io/test_landing/' target="_blank">
-                            <img class='img_work' src='img/2--landing.jpg'>
+                        <a href='https://kakoysegodnyaprazdnik.com/content/raschet-bioritmov-cheloveka.html' target="_blank">
+                            <img class='img_work' src='img/4--event.jpg'>
                         </a>
-                        <p>landing page</p>
+                        <p>Калькуляторы</p>
                     </div>
                     <div class='preview_work'>
                         <a href='https://maxorik.github.io/todo/' target="_blank">
