--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <body>
         <header class='header'>
             <div class='my_photo'>
-                <img src='img/myphoto2.jpg' id='my_photo'>
+                <img src='img/full.jpg' id='my_photo'>
             </div>
         
             <div class='download'>
