--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <p class='info_h'>Навыки</p>
                     <ul class='info_text'>
                         <i class="fa fa-check-circle" aria-hidden="true"></i><li>HTML (также Pug)</li>
-                        <i class="fa fa-check-circle" aria-hidden="true"></i><li>CSS (также Less)</li>
+                        <i class="fa fa-check-circle" aria-hidden="true"></i><li>CSS (также Scss)</li>
                         <i class="fa fa-check-circle" aria-hidden="true"></i><li>JavaScript и Jquery</li>
                         <i class="fa fa-check-circle" aria-hidden="true"></i><li>Vue.js</li>
                         <i class="fa fa-check-circle" aria-hidden="true"></i><li>Система контроля версий (Git)</li>
@@ -51,7 +51,7 @@
                         <i class="fa fa-check-circle" aria-hidden="true"></i><li>Кроссбраузерная верстка</li>
                         <i class="fa fa-check-circle" aria-hidden="true"></i><li>Семантическая верстка</li>
                         <i class="fa fa-check-circle" aria-hidden="true"></i><li>Адаптивная верстка</li>
-                        <i class="fa fa-check-circle" aria-hidden="true"></i><li>Резиновая верстка</li>
+                        <i class="fa fa-check-circle" aria-hidden="true"></i><li>БЭМ</li>
                         <i class="fa fa-check-circle" aria-hidden="true"></i><li>PixelPerfect</li>
                     </ul>
                 </div>
