--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
                         <p>Калькуляторы</p>
                     </div>
                     <div class='preview_work'>
-                        <a href='https://maxorik.github.io/todo/' target="_blank">
-                            <img class='img_work' src='img/3--todo.jpg'>
+                        <a href='https://maxorik.github.io/weather/' target="_blank">
+                            <img class='img_work' src='img/5--weather.jpg'>
                         </a>
-                        <p>blocknote</p>
+                        <p>Weather</p>
                     </div>
                 </div>
             </section>
