--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <i class="fa fa-check-circle" aria-hidden="true"></i><li>HTML (также Pug)</li>
                         <i class="fa fa-check-circle" aria-hidden="true"></i><li>CSS (также Scss)</li>
                         <i class="fa fa-check-circle" aria-hidden="true"></i><li>JavaScript и Jquery</li>
-                        <i class="fa fa-check-circle" aria-hidden="true"></i><li>Vue.js</li>
+                        <i class="fa fa-check-circle" aria-hidden="true"></i><li>Vue.js (Vuex, Router)</li>
                         <i class="fa fa-check-circle" aria-hidden="true"></i><li>Система контроля версий (Git)</li>
                         <i class="fa fa-check-circle" aria-hidden="true"></i><li>Сборщики (webpack)</li>
                         <i class="fa fa-check-circle" aria-hidden="true"></i><li>CMS (wordpress)</li>
@@ -53,6 +53,7 @@
                         <i class="fa fa-check-circle" aria-hidden="true"></i><li>Адаптивная верстка</li>
                         <i class="fa fa-check-circle" aria-hidden="true"></i><li>БЭМ</li>
                         <i class="fa fa-check-circle" aria-hidden="true"></i><li>PixelPerfect</li>
+                        <i class="fa fa-check-circle" aria-hidden="true"></i><li>Опыт удаленной работы</li>
                     </ul>
                 </div>
             </section>
