--- a/index.html
+++ b/index.html
@@ -107,6 +107,27 @@
                         <p>Weather</p>
                     </div>
                 </div>
+                <hr class='main_hr'/>
+                <div class='work_example'>
+                    <div class='preview_work'>
+                        <a href='https://maxorik.github.io/so-quest/' target="_blank">
+                            <img class='img_work' src='img/7--treelist.jpg'>
+                        </a>
+                        <p>Динамический список</p>
+                    </div>
+                    <div class='preview_work'>
+                        <a href='https://maxorik.github.io/kidsgame/' target="_blank">
+                            <img class='img_work' src='img/6--kidsgame.jpg'>
+                        </a>
+                        <p>Детская игра</p>
+                    </div>
+                    <div class='preview_work'>
+                        <a href='https://github.com/Maxorik' target="_blank">
+                            <img class='img_work' src='img/git.png'>
+                        </a>
+                        <p>Репозитории</p>
+                    </div>
+                </div>
             </section>
             </main>
     
